--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".get.TranslationActivity"></activity>
-        <activity android:name=".post.C2ETranslationActivity"></activity>
-        <activity android:name=".polling.PollingActivity"></activity>
-        <activity android:name=".threeLevelCache.ThreeLevelCacheActivity"></activity>
-        <activity android:name=".merge.MergeActivity"></activity>
-        <activity android:name=".merge.ZipAcitivity">
-
-        </activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".get.TranslationActivity" />
+        <activity android:name=".post.C2ETranslationActivity" />
+        <activity android:name=".polling.PollingActivity" />
+        <activity android:name=".threeLevelCache.ThreeLevelCacheActivity" />
+        <activity android:name=".merge.MergeActivity" />
+        <activity android:name=".merge.ZipAcitivity"></activity>
         <activity android:name=".merge.CombineLatestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,6 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".retry.RetryInternetActivity"></activity>
     </application>
 
 </manifest>
